[package]
name = "metrum"
version = "0.1.0"
edition = "2021"
authors = ["Somē Cho <itssomicho@gmail.com>"]
keywords = ["wav","audio","music","rhythm","clicktrack"]
repository="https://github.com/somecho/metrum"
description="Create click tracks from any rhythm"

[lib]
name = "metrum"
path ="src/lib.rs"

[[bin]]
name = "metrum"
path = "src/main.rs"

[dependencies]
hound = "3.5.1"
test-generator = "0.3.1"
