[package]
name = "metrum"
version = "0.1.18"
edition = "2021"
authors = ["Somē Cho <itssomicho@gmail.com>"]
keywords = ["wav","audio","music","rhythm","clicktrack"]
repository="https://github.com/somecho/metrum"
description="Create click tracks from any rhythm"

[lib]
name = "metrum"
path ="src/lib.rs"

[[bin]]
name = "metrum"
path = "src/main.rs"

[dependencies]
hound = "3.5.1"
clap = { version = "4.4.12", features = ["derive"] }

[dev-dependencies]
test-generator = "0.3.1"
