[package]
name = "metrome"
version = "0.1.18"
edition = "2021"
authors = ["Somē Cho <itssomicho@gmail.com>"]
keywords = ["wav","audio","music","rhythm","clicktrack"]
repository="https://github.com/somecho/metrum"
description="Create click tracks from any rhythm"
license="GPL-3.0"

[lib]
name = "metrome"
path ="src/lib.rs"

[[bin]]
name = "metrome"
path = "src/main.rs"

[dependencies]
hound = "3.5.1"
clap = { version = "4.4.12", features = ["derive"] }

[dev-dependencies]
test-generator = "0.3.1"
